@@ -1,3 +1,4 @@
+* Initial push for the sugar control panel (erikos)
 * #4358: pydoc strings for sugar.activity.Activity
 
 Snapshot 176262f2e9
